frontend/src/components/Diff/Diff.module.scss
.diff {
    height: 100%;
    position: relative;

    display: flex;
    flex-direction: column;
}

.bodyContainer {
    flex-grow: 1;
}

.bar {
    cursor: col-resize;
    background: var(--a50);
    z-index: 99;
}

.header {
    display: inline-flex;
    align-items: center;
    gap: 4px;

    height: 3em;
    padding: 0 1em;

    font-size: 0.8rem;
    font-weight: 500;
    color: var(--g1200);
    border-bottom: 1px dashed var(--a50);

    user-select: none;
}

// Columns
.headers,
.row {
    display: grid;
    width: 100%;
    grid-template-columns: var(--diff-left-width) auto var(--diff-right-width);
    overflow-x: hidden;
}

@supports not (backdrop-filter: blur(3px)) {
    .header {
        background: var(--g200);
    }
}

.body {
    flex: 1;
    overflow: overlay !important; // note: webkit only, see #275

    user-select: text;
    font-family: var(--monospace);
    font-size: 0.8rem;
    white-space: pre;

    list-style: none;

    scrollbar-color: #fff3 transparent;
    scrollbar-width: thin;
}

.row {
    height: 1.5em;
    line-height: 1.5em;

    align-items: stretch;

    > .cell {
        overflow: hidden;
        white-space: nowrap;

        color: #b3c1d3;

        padding: 0 1em;

        &.highlight {
            background-color: rgba(255, 255, 255, 0.025);

            .lineNumber {
                color: #c6c6c6;
            }
        }
    }
}

.cell span {
    min-width: 1ch;

    &.lineNumber {
        display: inline-block;

        color: #676e95;

        min-width: 24px;
        padding: 0 3px 0 5px;
        text-align: right;

        user-select: none;
    }
}

.immediate { color: #6d6dff; }
.stack { color: #abc501; }
.register { color: #aa8b00; }

.delay_slot {
    font-weight: bold;
    color: #969896;
}

.diff_change { color: #6d6dff; }
.diff_add { color: #45bd00; }
.diff_remove { color: #c82829; }
.source_filename { font-weight: bold; }

.source_function {
    font-weight: bold;
    text-decoration: underline;
}

.source_other { font-style: italic; }
.source_line_num { font-style: italic; }
.rotation0 { color: magenta; }
.rotation1 { color: cyan; }
.rotation2 { color: rgb(0, 212, 0); }
.rotation3 { color: red; }
.rotation4 { color: rgb(103, 106, 255); }
.rotation5 { color: lightpink; }
.rotation6 { color: lightcyan; }
.rotation7 { color: lightgreen; }
.rotation8 { color: grey; }

